test/fixtures/behaviors/common/error/badDefaultFunctionExport.behavior.ts

export default function () {
  return {
    something: "weird"
  }
}